z-index fixed

--- a/css/app.css
+++ b/css/app.css
@@ -57,6 +57,8 @@
     width: 40rem;
     display: flex;
     flex-direction: column;
+    position: relative;
+    z-index: 1;
 }
 .backgroundcardurl {
     background-image: url(../img/bg.webp);
@@ -107,10 +109,9 @@
     justify-content: center;
     padding: 0.5rem 0.6rem;
     position: relative;
-    left: 3.22rem;
-    top: 1.5rem;
+    left: 0rem;
+    top: -16.12589rem;
     box-shadow: 0px 0px 7px 1px black;
-    /* z-index: -1; */
 }
 .icon {
     filter: invert(100%) sepia(16%) saturate(0%) hue-rotate(123deg) brightness(101%) contrast(101%);
